--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'dev.znxki'
-version = '1.0'
+version = '1.0.1'
 
 repositories {
     mavenCentral()
@@ -53,6 +53,10 @@ processResources {
     inputs.properties props
     filteringCharset 'UTF-8'
     filesMatching('paper-plugin.yml') {
+        expand props
+    }
+
+    filesMatching('plugin.yml') {
         expand props
     }
 }
