--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: Gravewarden
-version: '1.0'
+version: '${version}'
 main: dev.znxki.gravewarden.Gravewarden
 api-version: '1.20'
 authors: [ zNxki_ ]
