fix: prevent Soul Compass from being dropped via mouse drag outside inventory

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -6,6 +6,8 @@ messages:
   not-your-grave: "&c&l! &8» &7This grave does not belong to you. It marks the rest of &e{player}&7."
 
   soul-compass-pointing: "&#7df9ff&l» &7Your &fSoul Compass &7is pointing to your grave."
+  soul-compass-restricted: "&#7df9ff&l» &cYou cannot put the Soul Compass in a container!"
+  soul-compass-removed: "&#7df9ff&l» &cThe Soul Compass has been destroyed because you tried to drop it!"
 
 items:
   soul-compass: # Navigate on your grave when you respawn
