--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -17,6 +17,15 @@ messages:
   player-not-found: "&cThis player isn't online."
   no-perms: "&cYou don't have permission to do that."
 
+actionbar:
+  tracker: # Found grave easier
+    enabled: true
+
+    messages:
+      distance: "&8[&b☠&8] &fBetween you and grave left: &b{blocks}m"
+      you-arrived: "&a&l✔ &2You have arrived at your grave! &a&l✔"
+
+
 gui: # graves list gui
   title: "&8» &cActive Graves"
 
